# Agrisense

./: .gitignore  Dockerfile  database_crops_seed.sql  gen_sql.py  generate_md.py  generate_seed.py  local_data_dump.sql  local_data_dump_columns.sql  local_data_dump_columns_modified.sql  render_insert_clean.sql  testAllCrops.js  testApiCall.js  test_api.js  test_ollama.py  update_email.py
AgrisenseAI/: README.md  pubspec.yaml
AgrisenseAI_admin/: package-lock.json  package.json
agritechia/: pubspec.yaml
agritechia_admin/: next.config.ts  package-lock.json  package.json
agritechs/: README.md  database.py  requirements.txt  reupload_pdfs.py  seed.py  test_cloudinary.py  test_db.py  test_serper.py  test_serper2.py  upload_raw.py
agritechs/src/agritechs/: audio_matcher.py  crew.py  dataset_Tomate_Oues_2026-04-01_2026-04-30.json  dataset_Tomate_Ouest_2026-04-01_2026-04-30.json  enroll_local_audio.py  execute_agent.py  main.py  pyproject.toml  run_module2.py  save.py
agritechs/src/agritechs/config/: agents.yaml  tasks.yaml
agritechs/src/agritechs/ia_api/: main.py
agritechs/src/agritechs/tools/: custom_tool.py
backend/: INSTRUCTION.md  addPresentationData.js  add_col.js  add_farmer.cjs  assign_crops.js  check.js  check_cols.js  check_db.js  check_markets.cjs  check_markets_counts.cjs  check_status.js  cleanAndSeed.js  clone_crops.cjs  delete_crops.cjs  fetch_markets.ts  find_db.py  generate_3_postman.py  get_user.cjs  get_users.cjs  init_db.sql  insert_seed.cjs  keep_10_crops.js  keep_one_per_category.js  list_db.py  markets_cache.json  package-lock.json  (+32 more)
(+86 files in other folders)
