[project]
name = "agritechs"
version = "0.1.0"
description = "agritechs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.1.1",
    "cloudinary>=1.44.2",
    "crewai-tools>=1.14.2",
    "crewai[litellm,tools]==1.14.2",
    "langchain>=1.2.17",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "litellm>=1.83.0",
    "psycopg2-binary>=2.9.12",
    "pymupdf>=1.26.7",
    "pypdf>=6.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.33.1",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
]

[project.scripts]
agritechs = "agritechs.main:run"
run_crew = "agritechs.main:run"
train = "agritechs.main:train"
replay = "agritechs.main:replay"
test = "agritechs.main:test"
run_with_trigger = "agritechs.main:run_with_trigger"
run_module2 = "agritechs.run_module2:run_module2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agritechs"]

[tool.crewai]
type = "crew"
